[package]
name = "rust_vm"
version = "0.1.0"
authors = ["npex42 <npex42@gmail.com>"]
edition = "2018"

description = "A Simple Rust Virtual Machine"
license = "GPL 2.0"
documentation = "https://github.com/NPEX42/rust_vm"
homepage = "https://github.com/NPEX42/rust_vm"
repository = "https://github.com/NPEX42/rust_vm"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
